(library
 (name uuseg)
 (public_name uuseg)
 (wrapped false)
 (modules :standard \ uuseg_string)
 (libraries uucp)
 (flags :standard -w -50-39-37-32-27))

(library
 (name uuseg_string)
 (public_name uuseg.string)
 (wrapped false)
 (modules uuseg_string)
 (libraries uuseg)
 (flags :standard -w -50-39-37-32))
